refactor: reorder to have test cases before private methods
Also removed `static` modifier where not needed