@@ -1099,7 +1099,7 @@ public class ModifyProcessInstanceTest {
         .hasSize(4);
 
     // when
-    final var ancestorScopeKey = flowscopekeys.get(0);
+    final var ancestorScopeKey = flowscopekeys.getFirst();
     final var modifiedRecord =
         ENGINE
             .processInstance()
@@ -1353,69 +1353,6 @@ public class ModifyProcessInstanceTest {
         .isNotEmpty();
   }
 
-  private static void verifyThatRootElementIsActivated(
-      final long processInstanceKey, final String elementId, final BpmnElementType elementType) {
-    verifyThatElementIsActivated(processInstanceKey, elementId, elementType, processInstanceKey);
-  }
-
-  private static void verifyThatElementIsActivated(
-      final long processInstanceKey,
-      final String elementId,
-      final BpmnElementType elementType,
-      final long flowScopeKey) {
-
-    final var processActivatedEvent =
-        RecordingExporter.processInstanceRecords(ProcessInstanceIntent.ELEMENT_ACTIVATED)
-            .withProcessInstanceKey(processInstanceKey)
-            .withElementType(BpmnElementType.PROCESS)
-            .getFirst()
-            .getValue();
-
-    final var elementInstanceEvents =
-        RecordingExporter.processInstanceRecords()
-            .onlyEvents()
-            .withElementId(elementId)
-            .withProcessInstanceKey(processInstanceKey)
-            .limit(elementId, ProcessInstanceIntent.ELEMENT_ACTIVATED)
-            .toList();
-
-    Assertions.assertThat(elementInstanceEvents)
-        .extracting(Record::getIntent)
-        .describedAs("Expect the element instance to have been activated")
-        .containsExactly(
-            ProcessInstanceIntent.ELEMENT_ACTIVATING, ProcessInstanceIntent.ELEMENT_ACTIVATED);
-
-    Assertions.assertThat(elementInstanceEvents)
-        .extracting(Record::getKey)
-        .describedAs("Expect each element instance event to refer to the same entity")
-        .containsOnly(elementInstanceEvents.get(0).getKey());
-
-    Assertions.assertThat(elementInstanceEvents)
-        .extracting(Record::getValue)
-        .describedAs("Expect each element instance event to contain the complete record value")
-        .extracting(
-            ProcessInstanceRecordValue::getProcessDefinitionKey,
-            ProcessInstanceRecordValue::getBpmnProcessId,
-            ProcessInstanceRecordValue::getVersion,
-            ProcessInstanceRecordValue::getProcessInstanceKey,
-            ProcessInstanceRecordValue::getBpmnElementType,
-            ProcessInstanceRecordValue::getElementId,
-            ProcessInstanceRecordValue::getFlowScopeKey,
-            ProcessInstanceRecordValue::getParentProcessInstanceKey,
-            ProcessInstanceRecordValue::getParentElementInstanceKey)
-        .containsOnly(
-            Tuple.tuple(
-                processActivatedEvent.getProcessDefinitionKey(),
-                processActivatedEvent.getBpmnProcessId(),
-                processActivatedEvent.getVersion(),
-                processActivatedEvent.getProcessInstanceKey(),
-                elementType,
-                elementId,
-                flowScopeKey,
-                -1L,
-                -1L));
-  }
-
   @Test
   public void shouldUseAncestorSelectionInsideMultiInstances() {
     // given
@@ -1520,8 +1457,70 @@ public class ModifyProcessInstanceTest {
     verifyThatElementTreePathIsUpdated(elementBeforeModification);
   }
 
-  private static void verifyThatElementIsCompleted(
-      final long processInstanceKey, final String elementId) {
+  private void verifyThatRootElementIsActivated(
+      final long processInstanceKey, final String elementId, final BpmnElementType elementType) {
+    verifyThatElementIsActivated(processInstanceKey, elementId, elementType, processInstanceKey);
+  }
+
+  private void verifyThatElementIsActivated(
+      final long processInstanceKey,
+      final String elementId,
+      final BpmnElementType elementType,
+      final long flowScopeKey) {
+
+    final var processActivatedEvent =
+        RecordingExporter.processInstanceRecords(ProcessInstanceIntent.ELEMENT_ACTIVATED)
+            .withProcessInstanceKey(processInstanceKey)
+            .withElementType(BpmnElementType.PROCESS)
+            .getFirst()
+            .getValue();
+
+    final var elementInstanceEvents =
+        RecordingExporter.processInstanceRecords()
+            .onlyEvents()
+            .withElementId(elementId)
+            .withProcessInstanceKey(processInstanceKey)
+            .limit(elementId, ProcessInstanceIntent.ELEMENT_ACTIVATED)
+            .toList();
+
+    Assertions.assertThat(elementInstanceEvents)
+        .extracting(Record::getIntent)
+        .describedAs("Expect the element instance to have been activated")
+        .containsExactly(
+            ProcessInstanceIntent.ELEMENT_ACTIVATING, ProcessInstanceIntent.ELEMENT_ACTIVATED);
+
+    Assertions.assertThat(elementInstanceEvents)
+        .extracting(Record::getKey)
+        .describedAs("Expect each element instance event to refer to the same entity")
+        .containsOnly(elementInstanceEvents.getFirst().getKey());
+
+    Assertions.assertThat(elementInstanceEvents)
+        .extracting(Record::getValue)
+        .describedAs("Expect each element instance event to contain the complete record value")
+        .extracting(
+            ProcessInstanceRecordValue::getProcessDefinitionKey,
+            ProcessInstanceRecordValue::getBpmnProcessId,
+            ProcessInstanceRecordValue::getVersion,
+            ProcessInstanceRecordValue::getProcessInstanceKey,
+            ProcessInstanceRecordValue::getBpmnElementType,
+            ProcessInstanceRecordValue::getElementId,
+            ProcessInstanceRecordValue::getFlowScopeKey,
+            ProcessInstanceRecordValue::getParentProcessInstanceKey,
+            ProcessInstanceRecordValue::getParentElementInstanceKey)
+        .containsOnly(
+            Tuple.tuple(
+                processActivatedEvent.getProcessDefinitionKey(),
+                processActivatedEvent.getBpmnProcessId(),
+                processActivatedEvent.getVersion(),
+                processActivatedEvent.getProcessInstanceKey(),
+                elementType,
+                elementId,
+                flowScopeKey,
+                -1L,
+                -1L));
+  }
+
+  private void verifyThatElementIsCompleted(final long processInstanceKey, final String elementId) {
 
     Assertions.assertThat(
             RecordingExporter.processInstanceRecords()
@@ -1535,7 +1534,7 @@ public class ModifyProcessInstanceTest {
             ProcessInstanceIntent.ELEMENT_COMPLETING, ProcessInstanceIntent.ELEMENT_COMPLETED);
   }
 
-  private static void verifyThatProcessInstanceIsCompleted(final long processInstanceKey) {
+  private void verifyThatProcessInstanceIsCompleted(final long processInstanceKey) {
 
     Assertions.assertThat(
             RecordingExporter.processInstanceRecords(ProcessInstanceIntent.ELEMENT_COMPLETED)
@@ -1547,7 +1546,7 @@ public class ModifyProcessInstanceTest {
         .isPresent();
   }
 
-  private static void completeJobs(final long processInstanceKey, final int numberOfJobs) {
+  private void completeJobs(final long processInstanceKey, final int numberOfJobs) {
     RecordingExporter.jobRecords(JobIntent.CREATED)
         .withProcessInstanceKey(processInstanceKey)
         .limit(numberOfJobs)
@@ -1555,7 +1554,7 @@ public class ModifyProcessInstanceTest {
         .forEach(jobKey -> ENGINE.job().withKey(jobKey).complete());
   }
 
-  private static long getElementInstanceKeyOfElement(
+  private long getElementInstanceKeyOfElement(
       final long processInstanceKey, final String elementId) {
     return RecordingExporter.processInstanceRecords(ProcessInstanceIntent.ELEMENT_ACTIVATED)
         .withProcessInstanceKey(processInstanceKey)
